<resources>
    <string name="account__oauth__loading">加载中...</string>
    <string name="account__oauth__sending">正在导出笔记...</string>
    <string name="account__oauth__ok">导出笔记成功!</string>
    <string name="account__oauth__error">导出笔记失败!</string>
    <string name="account__shared__duokan_logging_in">登录中，请稍候...</string>
    <string name="account__shared__duokan_relogging_in">登录中，请稍候...</string>
    <string name="account__shared__duokan_registering">注册中，请稍候...</string>
    <string name="account__account_view__duokan_account">多看帐号: </string>
    <string name="account__account_view__third_part_accounts">第三方帐号设置</string>
    <string name="account__account_view__other">其他: </string>
    <string name="account__account_view__help">使用帮助</string>
    <string name="account__account_view__about">关于我们</string>
    <string name="account__dk_register_view__title">注册新用户</string>
    <string name="account__dk_register_view__alias_name_hint">昵称（可不填）</string>
    <string name="account__dk_register_view__email_address_hint">您的常用邮箱</string>
    <string name="account__dk_register_view__password_hint">请输入密码</string>
    <string name="account__dk_register_view__show_password">显示密码</string>
    <string name="account__dk_register_view__register">注册</string>
    <string name="acconnt__dk_register_view__empty_email_prompt">邮箱不能为空</string>
    <string name="account__dk_register_view__empty_password_prompt">密码不能为空</string>
    <string name="account__dk_login_view__title">登录多看帐号</string>
    <string name="account__dk_login_view__why">登录多看帐号可购买书籍、同步阅读信息</string>
    <string name="account__dk_login_view__email">您的邮箱</string>
    <string name="account__dk_login_view__password">您的密码</string>
    <string name="account__dk_login_view__login">登录</string>
    <string name="account__dk_login_view__register">免费注册</string>
    <string name="account__dk_login_view__forgot_password">忘记密码？</string>
    <string name="account__dk_login_view__email_empty_prompt">请输入注册邮箱地址</string>
    <string name="account__mi_dk_login_view__title">登录多看帐号</string>
    <string name="account__mi_dk_login_view__why">登录多看帐号可购买书籍、同步阅读信息</string>
    <string name="account__mi_dk_login_view__email">您注册的邮箱</string>
    <string name="account__mi_dk_login_view__password">您的密码</string>
    <string name="account__mi_dk_login_view__dk_login">登录</string>
    <string name="account__mi_dk_login_view__register">免费注册</string>
    <string name="account__mi_dk_login_view__forgot_password">忘记密码？</string>
    <string name="account__mi_dk_login_view__mi_login">小米帐号登录</string>
    <string name="account__dk_relogin_view__title">重新登录多看帐号</string>
    <string name="account__dk_relogin_view__why">上次登录过期，请重新登录多看帐号</string>
    <string name="account__dk_relogin_view__email">您注册的邮箱</string>
    <string name="account__dk_relogin_view__password">您的密码</string>
    <string name="account__dk_relogin_view__login">登录</string>
    <string name="account__dk_relogin_view__forgot_password">忘记密码？</string>
    <string name="account__dk_send_back_password_view__title">忘记密码</string>
    <string name="account__dk_send_back_password_view__email">请输入您注册用的邮箱: </string>
    <string name="account__dk_send_back_password_view__send">找回密码</string>
    <string name="account__dk_send_back_password_view__sent">密码已发送到您的注册邮箱</string>
    <string name="account__dk_send_back_password_view__sending">正在找回密码，请稍候...</string>
    <string name="account__dk_settings_view__title">修改帐号信息</string>
    <string name="account__dk_settings_view__new_alias_name">昵称</string>
    <string name="account__dk_settings_view__new_alias_name_hint">新昵称</string>
    <string name="account__dk_settings_view__change_password">修改密码</string>
    <string name="account__dk_settings_view__old_password_hint">旧密码</string>
    <string name="account__dk_settings_view__new_password_hint">新密码</string>
    <string name="account__dk_settings_view__show_password">显示密码</string>
    <string name="account__dk_settings_view__saving">正在保存，请稍候...</string>
    <string name="account__account_view__recommend_apps">精品应用推荐</string>
    <string name="account__account_view__report">发送log</string>
    <string name="account__account_view__feedback">用户反馈</string>
    <string name="account__shared__exchange_username">正在获取用户名...</string>
    <string name="account__oauth_web_view__title">绑定印象笔记</string>
    <string name="account__oauth_web_view__title1">绑定Evernote International</string>
    <string name="account__oauth_web_view__change">印象笔记</string>
    <string name="account__oauth_web_view__change1">Evernote International</string>
    <string name="bookshelf__title_view__bookshelf">我的书架</string>
    <string name="bookshelf__menu_view__organize_shelf">整理书架</string>
    <string name="bookshelf__menu_view__local_book">本机书籍</string>
    <string name="bookshelf__menu_view__wifi_transmission">WiFi传书</string>
    <string name="bookshelf__menu_view__import_book">导入本机书籍</string>
    <string name="bookshelf__menu_view__match_info">自动匹配封面</string>
    <string name="bookshelf__menu_view__clear_book">清理无效书籍</string>
    <string name="bookshelf__menu_view__serialized_book_update">更新连载章节</string>
    <string name="bookshelf__menu_view__request_more">更多...</string>
    <string name="bookshelf__menu_view__feed_back">意见反馈</string>
    <string name="bookshelf__menu_view__check_update">检查软件更新</string>
    <string name="bookshelf__menu_view__app_imprint">关于多看阅读</string>
    <string name="bookshelf__empty_view__shelf_wait_fill">空荡荡的书架等您来填满</string>
    <string name="bookshelf__empty_view__to_store">去书城下载</string>
    <string name="bookshelf__empty_view__to_local">浏览本地书籍</string>
    <string name="bookshelf__empty_view__to_wifi">无线传书</string>
    <string name="bookshelf__check_serial_updates_view__title">更新连载章节</string>
    <string name="bookshelf__check_serial_updates_view__updating">已检查&lt;font color=#ed6c00> %1$d / %2$d &lt;/font>本连载书籍...</string>
    <string name="bookshelf__check_serial_updates_view__update_done">更新完成</string>
    <string name="bookshelf__check_serial_updates_view__updated">共有&lt;font color=#ed6c00> %1$d &lt;/font>本书籍更新</string>
    <string name="bookshelf__sort_tab_view__name">书名</string>
    <string name="bookshelf__sort_tab_view__author">作者</string>
    <string name="bookshelf__sort_tab_view__category">分组</string>
    <string name="bookshelf__wifi_transfer_view__transfer_files">文件传输</string>
    <string name="bookshelf__wifi_transfer_view__wifi_setting">网络设置</string>
    <string name="bookshelf__wifi_transfer_view__wifi_enable">WiFi服务已开启</string>
    <string name="bookshelf__wifi_transfer_view__wifi_disable">WiFi服务未启用</string>
    <string name="bookshelf__wifi_transfer_view__check_wifi_state">请检查您的网络状态</string>
    <string name="bookshelf__wifi_transfer_view__wifi_state_error">是不是网络设置有问题</string>
    <string name="bookshelf__wifi_transfer_view__transfer_msg">不用数据线也能将文件上传到手机</string>
    <string name="bookshelf__wifi_transfer_view__transfer_doc">请在“我的电脑”地址栏输入</string>
    <string name="bookshelf__wifi_transfer_view__get_url">正在获取地址...</string>
    <string name="bookshelf__file_browser_view__local_books">本机书籍</string>
    <string name="bookshelf__file_import_view__count">扫描到%d本书</string>
    <string name="bookshelf__file_import_view__all">全选</string>
    <string name="bookshelf__file_import_view__inverse">反选</string>
    <string name="bookshelf__file_import_view__import">导入</string>
    <string name="bookshelf__file_import_view__cancel">取消</string>
    <string name="bookshelf__file_import_view__organize_books">正在组织数据...</string>
    <string name="bookshelf__file_import_view__imported">已导入</string>
    <string name="bookshelf__file_import_view__ensure_import">导入确认</string>
    <string name="bookshelf__file_import_view__import_default_category">同时导入目录分组信息</string>
    <string name="bookshelf__file_browser_title_view__scan_dir">智能扫描</string>
    <string name="bookshelf__file_browser_view__back_up">上一级</string>
    <string name="bookshelf__shared_title_view__organize_books">整理书架</string>
    <string name="bookshelf__shared_title_view__has_selected">已选择</string>
    <string name="bookshelf__shared_title_view__selected_category">选择分组</string>
    <string name="bookshelf__organize_book_bottom_view__move">移动到</string>
    <string name="bookshelf__organize_book_bottom_view__delete">删除</string>
    <string name="bookshelf__search_book_view__result_count">%d 本本地图书</string>
    <string name="bookshelf__search_book_view__search_by_store">去书城搜索</string>
    <string name="bookshelf__general_shared__new_category_name">新分组名称</string>
    <string name="bookshelf__general_shared__delete_book">删除书籍</string>
    <string name="bookshelf__general_shared__delete_recently_book">删除最近阅读记录不会删除书籍</string>
    <string name="bookshelf__general_shared__delete_book_on_disk">同时删除本地文件</string>
    <string name="bookshelf__general_shared__delete">删除</string>
    <string name="bookshelf__general_shared__cancel">取消</string>
    <string name="bookshelf__general_shared__deleting_files">正在删除书籍...</string>
    <string name="bookshelf__general_shared__no_select_books">没有选中任何书籍！</string>
    <string name="bookshelf__general_shared__book_count">共 %d 本</string>
    <string name="bookshelf__general_shared__ungrouped">未分组</string>
    <string name="bookshelf__general_shared__downloading">下载中...</string>
    <string name="bookshelf__general_shared__download_paused">已暂停</string>
    <string name="bookshelf__general_shared__download_failed">下载失败</string>
    <string name="bookshelf__list_item_menu_view__delete">删除</string>
    <string name="bookshelf__list_item_menu_view__change_group">移动到分组</string>
    <string name="bookshelf__list_item_menu_view__match_cover">联网找封面</string>
    <string name="bookshelf__modify_book_category_view__create_new_group">新建组</string>
    <string name="bookshelf__search_book_view__search_local_books">搜索书架</string>
    <string name="bookshelf__search_book_view__search_store_books">搜索书城</string>
    <string name="bookshelf__recently_reading_empty_view__recently_reading">最近阅读</string>
    <string name="bookshelf__category_view__item_count">共 %d 本</string>
    <string name="bookshelf__book_view__schedule_unread">未读</string>
    <string name="bookshelf__book_view__schedule_readed">已读</string>
    <string name="bookshelf__delete_category_dialog_view__delete_category">删除分组</string>
    <string name="bookshelf__delete_category_dialog_view__delete_category_books">删除图书</string>
    <string name="bookshelf__delete_category_dialog_view__undelete_category_books">不删除图书</string>
    <string name="bookshelf__delete_category_dialog_view__choose_delete_category_books">是否也同时删除文件夹内的图书？</string>
    <string name="bookshelf__match_single_book_view__match_change_name">同时替换书名</string>
    <string name="bookshelf__match_single_book_view__apply">应用</string>
    <string name="general__shared__buy">购买</string>
    <string name="personal__purchased_books_view__empty">还没有书哦</string>
    <string name="personal__purchased_books_view__description">书山有路勤为径，学海无涯苦作舟</string>
    <string name="personal__purchased_books_view__go_store">去书城看看</string>
    <string name="reading__shared__search_next">下一个</string>
    <string name="reading__shared__search_prev">上一个</string>
    <string name="reading__serial_chapter_view__buy_to_read">需要购买后阅读</string>
    <string name="reading__serial_chapter_view__fetching">加载中，请稍候…</string>
    <string name="reading__serial_chapter_view__refetching">点击重试</string>
    <string name="reading__search_next_view__prev">上一个</string>
    <string name="store_comment__comment_empty_view__no_comment">还没有评论</string>
    <string name="store_comment__comment_empty_view__no_comment1">咦！抢个沙发？</string>
    <string name="store_comment__comment_empty_view__send">我要评论</string>
    <string name="store__shopping_cart_empty_view__no_book">购物车还是空的哦</string>
    <string name="store__shopping_cart_empty_view__hint">使用购物车可以一次购买多本书籍</string>
    <string name="store__shopping_cart_empty_view__go_store">逛逛书城</string>
    <string name="store__shopping_cart_empty_view__go_favourite">查看收藏</string>
</resources>