<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/general__shared__color_ebebeb" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.duokan.reader.ui.general.DkHeaderView android:id="@id/account__dk_login_view__header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:id="@id/account__dk_login_view__scroll" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_333333" android:gravity="center" android:id="@id/account__dk_login_view__why" android:layout_width="fill_parent" android:layout_height="55.0dip" android:text="@string/account__dk_login_view__why" />
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_login_view__email" android:background="@drawable/general__shared__group_input_first" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/account__dk_login_view__email" android:inputType="textEmailAddress" style="@style/general__shared__text_view_style1" />
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_login_view__password" android:background="@drawable/general__shared__group_input_last" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/account__dk_login_view__password" android:inputType="textPassword" />
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@android:color/white" android:gravity="center" android:id="@id/account__dk_login_view__login" android:background="@drawable/general__shared__confirm_btn_45dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/account__dk_login_view__login" />
            <com.duokan.reader.ui.general.DkLabelView android:gravity="center" android:id="@id/account__dk_login_view__register" android:background="@drawable/general__shared__btn_45dip" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="20.0dip" android:text="@string/account__dk_login_view__register" style="@style/general__shared__text_view_style1" />
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_333333" android:layout_gravity="right" android:id="@id/account__dk_login_view__forgot_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/account__dk_login_view__forgot_password" android:drawableRight="@drawable/general__shared__more" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
