<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_40" android:textColor="#ff000000" android:gravity="center" android:id="@id/reading__serial_chapter_view__chapter_name" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_333333" android:id="@id/reading__serial_chapter_view__buy_to_read" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/reading__serial_chapter_view__buy_to_read" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_333333" android:id="@id/reading__serial_chapter_view__fetching" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/reading__serial_chapter_view__fetching" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_333333" android:gravity="center" android:id="@id/reading__serial_chapter_view__refetching" android:background="@drawable/general__shared__btn_45dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/reading__serial_chapter_view__refetching" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_ffffff" android:gravity="center" android:id="@id/reading__serial_chapter_view__buy" android:background="@drawable/general__shared__confirm_btn_45dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/general__shared__buy" />
</LinearLayout>
