<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/general__shared__color_ebebeb" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.duokan.reader.ui.general.DkHeaderView android:id="@id/account__dk_register_view__header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_register_view__email" android:background="@drawable/general__shared__group_input_first" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:hint="@string/account__dk_register_view__email_address_hint" android:inputType="textEmailAddress" />
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__duokan_register_view__alias_name" android:background="@drawable/general__shared__group_input_last" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/account__dk_register_view__alias_name_hint" android:inputType="textPersonName" />
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__duokan_register_view__password" android:background="@drawable/general__shared__single_input" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:hint="@string/account__dk_register_view__password_hint" android:inputType="textPassword" />
            <CheckBox android:textSize="@dimen/general__shared__normal_text_size" android:textColor="@color/general__shared__color_666666" android:layout_gravity="right" android:id="@id/account__dk_register_view__show_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:button="@drawable/general__shared__check_box1" android:text="@string/account__dk_register_view__show_password" />
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_ffffff" android:gravity="center" android:id="@id/account__dk_register_view__register" android:background="@drawable/general__shared__confirm_btn_45dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:text="@string/account__dk_register_view__register" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
