<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/general__shared__dip_15" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_5" android:layout_marginBottom="@dimen/general__shared__dip_15" android:src="@drawable/general__shared__delete" />
    <TextView android:textSize="@dimen/general__shared__font_size_px_36" android:textColor="@color/general__shared__color_333333" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/general__shared__dip_10" android:text="@string/bookshelf__delete_category_dialog_view__choose_delete_category_books" />
    <Button android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_333333" android:layout_gravity="center_horizontal" android:id="@id/bookshelf__delete_category_dialog_view__delete_category_books" android:background="@drawable/general__shared__btn_45dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_10" android:text="@string/bookshelf__delete_category_dialog_view__delete_category_books" />
    <Button android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_333333" android:layout_gravity="center_horizontal" android:id="@id/bookshelf__delete_category_dialog_view__undelete_category_books" android:background="@drawable/general__shared__btn_45dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_10" android:text="@string/bookshelf__delete_category_dialog_view__undelete_category_books" />
    <Button android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_333333" android:layout_gravity="center_horizontal" android:id="@id/bookshelf__delete_category_dialog_view__cancel" android:background="@drawable/general__shared__btn_45dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_10" android:text="@string/bookshelf__general_shared__cancel" />
</LinearLayout>
