<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/general__shared__color_ebebeb" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.duokan.reader.ui.general.DkHeaderView android:id="@id/account__dk_settings_view__header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_40" android:textColor="@color/general__shared__color_333333" android:gravity="center" android:id="@id/account__dk_settings_view__alias_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" />
            <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_666666" android:gravity="center" android:id="@id/account__dk_settings_view__email" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="14.0dip" android:text="@string/account__dk_settings_view__new_alias_name" style="@style/general__shared__text_view_style2" />
            <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_settings_view__new_alias_name" android:background="@drawable/general__shared__single_input" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:hint="@string/account__dk_settings_view__new_alias_name_hint" />
            <CheckBox android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#ff666666" android:layout_gravity="right" android:id="@id/account__dk_settings_view__change_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:button="@null" android:text="@string/account__dk_settings_view__change_password" android:drawableRight="@drawable/general__shared__check_box2" />
            <LinearLayout android:orientation="vertical" android:id="@id/account__dk_settings_view__old_new_passwords" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_settings_view__old_password" android:background="@drawable/general__shared__group_input_first" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:hint="@string/account__dk_settings_view__old_password_hint" android:inputType="textPassword" />
                <EditText android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="#7f000000" android:gravity="left|center" android:id="@id/account__dk_settings_view__new_password" android:background="@drawable/general__shared__group_input_last" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/account__dk_settings_view__new_password_hint" android:inputType="textPassword" />
                <CheckBox android:textSize="@dimen/general__shared__font_size_px_32" android:textColor="@color/general__shared__color_666666" android:layout_gravity="right" android:id="@id/account__dk_settings_view__show_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:button="@drawable/general__shared__check_box1" android:text="@string/account__dk_settings_view__show_password" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
