<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/store_comment__comment_empty_view__root" android:background="@color/general__shared__color_eeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/general__shared__empty_icon" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_36" android:textColor="@color/general__shared__color_666666" android:id="@id/personal__purchased_books_empty_view__no_book" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_5" android:text="@string/personal__purchased_books_view__empty" />
    <com.duokan.reader.ui.general.DkLabelView android:textSize="@dimen/general__shared__font_size_px_28" android:textColor="@color/general__shared__color_888888" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_5" android:text="@string/personal__purchased_books_view__description" />
    <com.duokan.reader.ui.general.DkLabelView android:layout_gravity="center" android:id="@id/personal__purchased_books_empty_view__go_store" android:paddingLeft="@dimen/general__shared__dip_30" android:paddingRight="@dimen/general__shared__dip_30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/general__shared__dip_10" android:text="@string/personal__purchased_books_view__go_store" style="@style/store__shard__big_button_style" />
</LinearLayout>
